# queue-reactive-limit-order-book-market-simulator

./: .gitignore  .patchproof.yml  AGENT_PROMPT.md  ARCHITECTURE.md  DATASETS.md  LICENSE  PATCHPROOF_DEMO.md  PLAN.md  README.md  RESEARCH.md  TASKS.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  patchproof.yml
dashboard/: app.py  guide_content.py
dashboard/pages/: 01_Research_Guide.py
data/processed/: intensities.json  simulation_events.csv  simulation_snapshots.csv
data/sample/: sample_events.csv
scripts/: benchmark.py  calibrate.py  download_data.sh  generate_sample_data.py  run_simulation.py  validate.py
src/lob_sim/: __init__.py  calibration.py  cli.py  order_book.py  queue_tracker.py  simulator.py  synthetic.py  types.py  validation.py
tests/empirical/: test_depth_profile.py  test_spread_distribution.py
tests/integration/: test_calibration_validation.py
tests/unit/: test_calibration.py  test_order_book.py  test_queue_tracker.py  test_simulator.py
