[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "queue-reactive-lob-simulator"
version = "0.1.0"
description = "Queue-reactive limit order book simulator with calibration, validation, and an interactive dashboard."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Quant Projects"}]
dependencies = [
  "numpy>=1.23",
  "pandas>=1.5",
  "plotly>=5.18",
  "streamlit>=1.32",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-cov>=4.1"]

[project.scripts]
lob-sim = "lob_sim.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
